testsuite/tests/grammar/invalid_lexers/rule_1.lkt
lexer foo_lexer {
    termination <- "def"
}

grammar foo_grammar {
    @main_rule main_rule <- Example("example")
}
